@startuml
!theme plain
skinparam defaultFontSize 12
skinparam linetype ortho
skinparam packageStyle rectangle

title nemo - Class Diagram (MVVM)

' ===== App Entry =====
package "App" {
    
}

' ===== View Layer =====
package "Views" {
    struct ContentView <<SwiftUI.View>> {
        - modelContext: ModelContext <<@Environment>>
        - conversations: [Conversation] <<@Query>>
        - viewModel: ConversationListViewModel <<@StateObject>>
        --
        + body: some View
    }

    struct ChatView <<SwiftUI.View>> {
        - conversationId: UUID
        - modelContext: ModelContext
        - viewModel: ChatViewModel <<@StateObject>>
        - isInputFocused: Bool <<@FocusState>>
        --
        + init(conversationId:modelContext:)
        + body: some View
    }

    struct SettingsView <<SwiftUI.View>> {
        - viewModel: SettingsViewModel <<@StateObject>>
        - showingModelSelection: Bool <<@State>>
        - dismiss: DismissAction <<@Environment>>
        --
        + body: some View
    }

    struct MessageBubbleView <<SwiftUI.View>> {
        - message: Conversation
        --
        + body: some View
    }

    struct ToolCallBlockView <<SwiftUI.View>> {
        - block: ToolCallBlock
        --
        + body: some View
    }

    struct StreamingBubbleView <<SwiftUI.View>> {
        - content: String
        --
        + body: some View
    }

    struct TypingIndicatorView <<SwiftUI.View>> {
        --
        + body: some View
    }
}

' ===== ViewModel Layer =====
package "ViewModels" {

    class ConversationListViewModel <<@MainActor, ObservableObject>> {
        --
        + selectedConversationId: UUID? <<@Published>>
        + showingSettings: Bool <<@Published>>
        + columnVisibility: NavigationSplitViewVisibility <<@Published>>
        --
        + init()
        + createNewConversation(in:) -> UUID
        + deleteConversation(conversationId:in:from:)
        + deleteConversations(at:in:from:)
        + buildConversationTitles(from:) -> [(UUID, String, Date)]
    }

    class ChatViewModel <<@MainActor, ObservableObject>> {
        - conversationId: UUID
        - modelContext: ModelContext
        - openRouterService: OpenRouterService
        - keychain: KeychainService
        - toolService: ToolService
        - apiKeyKeychainKey: String
        - streamingTask: Task<Void, Never>?
        --
        + messageText: String <<@Published>>
        + messages: [Conversation] <<@Published>>
        + isLoading: Bool <<@Published>>
        + errorMessage: String? <<@Published>>
        + streamingContent: String <<@Published>>
        + isStreaming: Bool <<@Published>>
        --
        + init(conversationId:modelContext:)
        + loadMessages()
        + sendMessage()
        + cancelStreaming()
        - runToolLoop(apiKey:modelId:history:) async throws -> String
    }

    class SettingsViewModel <<@MainActor, ObservableObject>> {
        - service: OpenRouterService
        - keychain: KeychainService
        - apiKeyKeychainKey: String
        - customPromptKey: String
        - selectedModelKey: String
        --
        + apiKey: String <<@Published>>
        + customPrompt: String <<@Published>>
        + models: [Model] <<@Published>>
        + selectedModelId: String <<@Published>>
        + isLoading: Bool <<@Published>>
        + errorMessage: String? <<@Published>>
        --
        + init()
        + saveApiKey()
        + saveCustomPrompt()
        + loadSettings()
        + selectModel(_:)
        + fetchModels()
    }
}

' ===== Model Layer =====
package "Models" {

    class Conversation <<@Model>> {
        - id: UUID
        - role: String
        - content: String
        - timestamp: Date
        - conversationId: UUID
        - toolCallBlocks: [ToolCallBlock]
        --
        + init(id:role:content:timestamp:conversationId:)
    }

    class ToolCallBlock <<@Model>> {
        - id: UUID
        - toolName: String
        - arguments: String
        - result: String
        - conversation: Conversation?
        --
        + init(id:toolName:arguments:result:)
    }

    class Item <<@Model>> {
        - timestamp: Date
        --
        + init(timestamp:)
    }

    struct Model <<Codable, Identifiable, Sendable>> {
        - id: String
        - name: String
        - description: String?
        - contextLength: Int?
        - pricing: Pricing?
        - topProvider: TopProvider?
        - architecture: Architecture?
        --
        + struct Pricing
        + struct TopProvider
        + struct Architecture
    }

    struct Pricing <<Codable, Sendable>> {
        - prompt: String?
        - completion: String?
        - request: String?
        - image: String?
    }

    struct TopProvider <<Codable, Sendable>> {
        - contextLength: Int?
        - maxCompletionTokens: Int?
        - isModerated: Bool?
    }

    struct Architecture <<Codable, Sendable>> {
        - modality: String?
        - tokenizer: String?
        - instructType: String?
    }
}

' ===== Service Layer =====
package "Services" {

    class KeychainService <<final, Sendable>> {
        - shared: KeychainService <<static>>
        --
        + save(_:forKey:) throws
        + load(forKey:) -> String?
        + delete(forKey:) throws
    }

    enum KeychainError <<LocalizedError>> {
        - saveError(OSStatus)
        - loadError(OSStatus)
        - deleteError(OSStatus)
        - unexpectedData
        --
        + errorDescription: String? { get }
    }

    class ToolService <<final, Sendable>> {
        + toolDefinitions: [[String: Any]] { get }
        --
        + execute(toolName:arguments:) async -> String
        - getCurrentTime() -> String
        - getWeather(arguments:) -> String
    }

    class OpenRouterService <<final, Sendable>> {
        - baseURL: String
        - customPromptKey: String
        - systemPrompt: String
        --
        + getModels(apiKey:) async throws -> [Model]
        + sendMessage(messages:modelId:apiKey:) async throws -> String
        + sendMessageStream(messages:modelId:apiKey:) -> AsyncThrowingStream<String, Error>
        + sendMessageWithTools(messages:modelId:apiKey:tools:) async throws -> ToolsResponse
    }

    struct ModelsResponse <<Codable, Sendable>> {
        - data: [Model]
    }

    struct ChatResponse <<Codable, Sendable>> {
        - choices: [Choice]
        --
        + struct Choice
    }

    struct ToolsResponse <<Codable, Sendable>> {
        - choices: [Choice]
        --
        + struct Choice
        + struct Message
        + struct ToolCall
    }

    struct StreamChunk <<Codable, Sendable>> {
        - choices: [Choice]
        --
        + struct Choice
        + struct Delta
    }

    struct ErrorEnvelope <<Codable, Sendable>> {
        - error: Inner?
        --
        + struct Inner
    }

    enum NetworkError <<LocalizedError>> {
        - invalidResponse
        - httpError(Int, String?)
        - noData
        - decodingError(Error)
        - missingAPIKey
        --
        + errorDescription: String? { get }
    }

    enum AppLogger {
        - subsystem: String <<private static>>
        --
        + network: Logger <<nonisolated(unsafe) static>>
        + tool: Logger <<nonisolated(unsafe) static>>
        + keychain: Logger <<nonisolated(unsafe) static>>
        + chat: Logger <<nonisolated(unsafe) static>>
        + settings: Logger <<nonisolated(unsafe) static>>
        + streaming: Logger <<nonisolated(unsafe) static>>
    }
}

' ===== Dependencies =====

nemoApp --> ContentView : WindowGroup
nemoApp --> Conversation : ModelContainer
nemoApp --> ToolCallBlock : ModelContainer

ContentView --> ConversationListViewModel : @StateObject
ContentView --> ChatView : NavigationSplitView detail
ContentView --> SettingsView : sheet
ContentView *--> Conversation : @Query

ChatView *--> ChatViewModel : @StateObject
ChatView --> MessageBubbleView : embeds
ChatView --> ToolCallBlockView : embeds
ChatView --> StreamingBubbleView : embeds
ChatView --> TypingIndicatorView : embeds

MessageBubbleView --> ToolCallBlockView : embeds (toolCallBlocks)

SettingsView *--> SettingsViewModel : @StateObject
SettingsView --> ModelSelectionView : sheet
ModelSelectionView --> SettingsViewModel : @ObservedObject

ConversationListViewModel --> Conversation : manages via ModelContext
ChatViewModel --> OpenRouterService : uses
ChatViewModel --> KeychainService : reads apiKey
ChatViewModel --> ToolService : executes tools
ChatViewModel --> Conversation : manages via ModelContext
ChatViewModel --> ToolCallBlock : manages via ModelContext
SettingsViewModel --> OpenRouterService : uses
SettingsViewModel --> KeychainService : saves/loads apiKey
SettingsViewModel --> Model : displays
KeychainError --* KeychainService
Conversation "1" *-- "0..*" ToolCallBlock : toolCallBlocks

note right of ChatViewModel
  @MainActor:
  - 単一会話内のメッセージ管理
  - ストリーミング対応 (Task)
  - Keychain経由でAPIキー取得
  - cancelStreaming()で中断保存
  - runToolLoop()でtool useループ管理
end note

note right of OpenRouterService
  nonisolated + Sendable:
  - getModels(apiKey:) / sendMessage()
  - sendMessageStream() for streaming
  - sendMessageWithTools() for tool use
  - Thread-safeな並列処理
  - APIキーは呼び出し元から受け取る
end note

note right of ToolService
  Sendable:
  - toolDefinitions: OpenRouter向けJSON定義
  - execute(): tool名でdispatch
  - 現在実装: get_current_time, get_weather
  - 将来拡張: web_search, read_file 等
end note

note right of KeychainService
  Singleton (shared):
  - APIキーをKeychainに安全保存
  - UserDefaultsは使用しない
  - save / load / delete
end note

note left of Item
  @Model定義ありだが
  現在未使用（将来拡張用）
end note

@enduml